Dark Mode: Fix some colors (#14228)
* fix some colors

* fix test and address requested changes

* address requested changes

--- a/ui/components/app/transaction-decoding/index.scss
+++ b/ui/components/app/transaction-decoding/index.scss
@@ -53,7 +53,7 @@
       .eth-tx-params {
         padding: 8px;
         width: 343px;
-        background: white;
+        background: var(--color-background-default);
         text-align: left;
         display: flex;
         flex-direction: column;
@@ -80,8 +80,8 @@
         width: fit-content;
         padding: 4px;
         text-transform: uppercase;
-        border: 1px solid rgb(149, 149, 149);
-        color: rgb(149, 149, 149);
+        border: 1px solid var(--color-border-default);
+        color: var(--color-background-alternative);
         border-radius: 4px;
       }
 
